Jetty 11 upgrade